fix z-index

--- a/app/sass/_media.scss
+++ b/app/sass/_media.scss
@@ -5,15 +5,7 @@
 
 }
 @media only screen and ( max-width: 1680px) {
-  //.signin-img{
-  //  width: 70rem;
-  //  height: auto;
-  //  top: 19rem;
-  //  left: 50vw;
-  //  img{
-  //    width: 100%;
-  //  }
-  //}
+
   .mission-wrap:after{
     right: 3rem;
     transform: rotate(53deg);
@@ -35,23 +27,21 @@
   }
 }
 @media only screen and (max-width: 1440px) {
-  //.signin-img {
-  //    top: -20rem;
-  //    right: -12rem;
-  //  img{
-  //    width: 75rem;
-  //    height: auto;
-  //  }
-  //}
+
   .signin-form{
     max-width: 60rem;
     width: 100%;
   }
+  .signin-img{
+    left: 45vw;
+    top: 21rem;
+    img{
+      width: 75rem;
+    }
+  }
 }
 @media only screen and (max-width: 1366px) {
-  .signin-img {
-    //right: 10rem;
-  }
+
   .box-block:last-child{
     padding-left: 0;
   }
@@ -120,16 +110,21 @@
 }
 
 @media only screen and ( max-width: 1280px){
+  .signin-img {
+    //top: -13rem;
+    //left: 35rem;
+    img {
+     width: 75rem;
+   }
+  }
 
-  .signin-block:before{
+    .signin-block:before{
     display: none;
   }
   .signin .main-title h2, .signin-text p{
     text-align: center;
   }
-  //.signin-img{
-  //  top: -18rem;
-  //}
+
   .signin-form,.signin-form__desc {
     max-width: 46rem;
   }
@@ -143,9 +138,6 @@
 }
 
 @media only screen and (max-width: 1024px) {
-  //.signin-img{
-  //  width: 100%;
-  //}
   .mission-wrap:before{
     top: 20rem;
   }
@@ -269,6 +261,12 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .signin-img {
+    top: 4rem;
+    left: 50%;
+    transform: translate(-50%);
+
+  }
     .main-title h2{
     font-size: 7.6rem;
       line-height: 7.6rem;
@@ -505,16 +503,10 @@
   .blog .section-list__title{
     height: max-content;
   }
-  //.signin-img {
-  //  left: 50%;
-  //  transform: translate(-50%);
-  //  max-width: 50rem;
-  //  width: 100%;
-  //  top: 10rem;
-  //}
+
   .signin-title{
     padding: 0;
-    margin: 0 auto 23rem;
+    margin: 0 auto 38rem;
   }
   .signin-title:before{
     left: 50%;
@@ -524,7 +516,10 @@
   .section-title h3{
     text-align: center;
   }
-}
+  .signin-block {
+    margin: 4rem auto;
+  }
+  }
 @media only screen and (max-width: 666px) {
 
   .signin-text h2, .signin-text p{
@@ -755,7 +750,19 @@
     border-bottom-left-radius: 2rem;
     border-bottom-right-radius: 2rem;
   }
-}
+  .signin-img img {
+    width: 38rem;
+  }
+  .signin-img {
+    top:11rem;
+  }
+  .signin-title {
+    margin: 0 auto 28rem;
+  }
+  .signin-form:before{
+    display: none;
+  }
+  }
 @media only screen and (max-width: 480px) {
 
 
